TRUNK-6696: Cache PrivilegeListener lookup instead of scanning Spring contexts on every privilege check